--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Coursera</title>
 </head>
 <body>
-<h1>by tirthankar</h1>
+<h1>Hello World!</h1>
 </body>
 </html>
